<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="LAPI_hello">Sample for LAPI</string>
    <string name="HAPI_hello">Sample for HAPI</string>
    <string name="app_name">HZFINGER SDK v1.301 for ANSI/ISO Standard</string>
    <string name="Put_your_finger">请按手指</string>
    <string name="Retry_your_finger">请按手指</string>
    <string name="Takeoff_your_finger">请抬手指</string>
    <string name="DBLinking">DBLinking </string>
    <string name="Insert_ID">请输入编号</string>
    <string name="Enroll_OK">注册成功</string>
    <string name="ERROR_NONE"></string>
    <string name="ERROR_ARGUMENTS">错误: 参数无效</string>
    <string name="ERROR_DOCANCELED">错误: 取消</string>
    <string name="ERROR_TIMEOUT_OVER">错误: 超时</string>
    <string name="ERROR_LOW_QUALITY">错误: 指纹图像质量差</string>
    <string name="ERROR_DUPLIED_FP">错误: 已注册的手指</string>
    <string name="ERROR_NEG_ACCESS">错误: 无法访问指纹数据库</string>
    <string name="ERROR_NEG_FIND">错误: 获取指纹模板失败</string>
    <string name="ERROR_NEG_DELETE">错误: 无法删除指纹模板</string>
    <string name="ERROR_INITIALIZE">错误: 指纹算法库没有初始化</string>
    <string name="ERROR_OVERFLOW_RECORD">错误: 指纹数据库已满</string>
    <string name="ERROR_DUPLIED_ID">错误: 该编号已注册</string>
    <string name="ERROR_NEG_ADDNEW">错误: 无法添加指纹模板</string>
    <string name="ERROR_NEG_CLEAR">错误: 无法清空指纹数据库</string>
    <string name="ERROR_NONE_FINGER">错误: 在采集器上没有手指</string>
    <string name="ERROR_NONE_CAPIMAGE">错误: 无法采集指纹图像</string>
    <string name="ERROR_NOT_CALIBRATED">错误: 指纹采集器没有校正</string>
    <string name="ERROR_NONE_DEVICE">错误: 打开设备失败</string>
    <string name="ERROR_CANT_GENERATE">错误: 生成模板失败</string>
    <string name="ERROR_EMPTY_DADABASE">错误: 数据库全空</string>
    <string name="ERROR_FAKE_FINGER">警告：检测到假指纹</string>
    <string name="TEXT_CHECK_LIVE">检测活体指纹</string>
    <string name="TEXT_CHK_COMM">通讯模式(USB/SPI)</string>
    <string name="TEXT_CHK_COLOR">色彩模式(黑/红)</string>
    <string name="TEXT_OPEN_DEVICE">打开设备</string>
    <string name="TEXT_CLOSE_DEVICE">断开设备</string>
    <string name="TEXT_GET_IMAGE">采集图像</string>
    <string name="TEXT_VIDEO">连续采集</string>
    <string name="TEXT_CALIBRATION">校正采集器</string>
    <string name="TEXT_GET_IMAGE_QUALITY">获取图像质量</string>
    <string name="TEXT_GET_NFI_QUALITY">获取NFIQ值</string>
    <string name="TEXT_CREATE_ANSI_TEMP">生成ANSI模板</string>
    <string name="TEXT_CREATE_ISO_TEMP">生成ISO模板</string>
    <string name="TEXT_COMPARE_TEMP">比对模板</string>
    <string name="TEXT_ANSI_CHAR">ANSI\n模板</string>
    <string name="TEXT_ISO_CHAR">ISO\n模板</string>
    <string name="TEXT_ID">编号</string>
    <string name="TEXT_LEVEL">安全等级 :</string>
    <string name="TEXT_RADIO_ANSI">ANSI</string>
    <string name="TEXT_RADIO_ISO">ISO</string>
    <string name="TEXT_ENROLL">注册</string>
    <string name="TEXT_VERIFY">验证</string>
    <string name="TEXT_SEARCH">搜索</string>
    <string name="TEXT_IMAGE">Image View</string>
    <string name="TEXT_DB_LOAD">导入指纹数据库</string>
    <string name="TEXT_DB_REFRESH">显示数据库</string>
    <string name="TEXT_DB_CLEAR">全删数据库</string>
    <string name="TEXT_DEL_RECORD">单一个删除</string>
    <string name="TEXT_MINUTIAE"/>
    <string name="TEXT_FPDELETE">删除</string>
    <string name="TEXT_SETTING">设置...</string>
    <string name="TEXT_STOP">停止</string>
    <string name="TEXT_CANCELED">取消</string>
    <string name="TEXT_ON_SEARCHING">正在搜索...</string>
</resources>
